--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "joi": "^17.6.0",
