--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "bootstrap": "^5.1.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -48,6 +49,8 @@
     "jasmine": "^4.0.2",
     "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.4.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "prettier": "^2.5.1",
     "supertest": "^6.2.1",
     "ts-node": "^10.4.0",
