--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/express-validator": "^3.0.0",
     "@types/jasmine": "^3.10.3",
     "@types/jsonwebtoken": "^8.5.8",
@@ -73,6 +74,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
